[package]
name = "prashan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18.1"
rand = "0.8.5"
os_info = { version = "3", default-features = false }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# cargo build --target wasm32-unknown-unknown --release
# wasm-bindgen --out-dir ./web_dist/ --target web ./target/wasm32-unknown-unknown/release/onewalker.wasm